--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,5 +16,8 @@
     "node-fetch": "^2.6.7",
     "obs-websocket-js": "^4.0.3",
     "socket.io": "^4.4.1"
+  },
+  "devDependencies": {
+    "electron": "^17.0.1"
   }
 }
