--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "east",
   "license": "ISC",
   "dependencies": {
+    "autoupdater": "^1.0.0",
     "axios": "^0.26.0",
     "cheerio": "^1.0.0-rc.10",
+    "electron-is-dev": "^2.0.0",
     "express": "^4.17.3",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.7",
