--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "electron": "^17.0.1",
     "electron-squirrel-startup": "^1.0.0",
-    "electron-winstaller": "^5.0.0"
+    "electron-winstaller": "^5.0.0",
+    "eslint": "^8.24.0"
   }
 }
